# overfit-gauntlet

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
skills/overfit-gauntlet/: SKILL.md
src/overfit_gauntlet/: __init__.py  cli.py  gauntlet.py  lint.py  metrics.py  stats.py  validate.py
tests/: conftest.py  test_cli.py  test_gauntlet.py  test_lint.py  test_metrics.py  test_stats.py  test_validate.py
tests/fixtures/: clean.py  leaky.py
