[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overfit-gauntlet"
version = "0.1.0"
description = "An opinionated anti-overfit validation gauntlet for trading-strategy backtests, plus a static lookahead linter for backtest code."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Dominic Falso" }]
keywords = [
    "backtest",
    "overfitting",
    "quantitative-finance",
    "sharpe-ratio",
    "trading",
    "validation",
    "lookahead-bias",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/TenseUp/overfit-gauntlet"
Source = "https://github.com/TenseUp/overfit-gauntlet"
Issues = "https://github.com/TenseUp/overfit-gauntlet/issues"

[project.scripts]
gauntlet = "overfit_gauntlet.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/overfit_gauntlet"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
